; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_stat.c_test_core_stat__root.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_stat.c_test_core_stat__root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.stat = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_stat__root() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.TYPE_5__, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.stat, align 4
  %5 = call i8* (...) @clar_sandbox_path()
  store i8* %5, i8** %1, align 8
  %6 = bitcast %struct.TYPE_5__* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 bitcast (%struct.TYPE_5__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %7 = load i8*, i8** %1, align 8
  %8 = call i32 @git_path_root(i8* %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = icmp sge i32 %9, 0
  %11 = zext i1 %10 to i32
  %12 = call i32 @cl_assert(i32 %11)
  %13 = load i8*, i8** %1, align 8
  %14 = load i32, i32* %3, align 4
  %15 = add nsw i32 %14, 1
  %16 = call i32 @git_buf_set(%struct.TYPE_5__* %2, i8* %13, i32 %15)
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @p_stat(i32 %18, %struct.stat* %4)
  %20 = call i32 @cl_must_pass(i32 %19)
  %21 = getelementptr inbounds %struct.stat, %struct.stat* %4, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @S_ISDIR(i32 %22)
  %24 = call i32 @cl_assert(i32 %23)
  %25 = call i32 @git_buf_dispose(%struct.TYPE_5__* %2)
  ret void
}

declare dso_local i8* @clar_sandbox_path(...) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @git_path_root(i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_buf_set(%struct.TYPE_5__*, i8*, i32) #1

declare dso_local i32 @cl_must_pass(i32) #1

declare dso_local i32 @p_stat(i32, %struct.stat*) #1

declare dso_local i32 @S_ISDIR(i32) #1

declare dso_local i32 @git_buf_dispose(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
